--- a/userfiles/C/ProgramFiles/noteblock/note-block.html
+++ b/userfiles/C/ProgramFiles/noteblock/note-block.html
@@ -4,38 +4,29 @@
     <meta name="mimeTypes" content="txt" />
     <script src="https://code.jquery.com/jquery-3.6.0.js">
     </script>
+    <script src="../operatingSystemApi.js"></script>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
     <div>
-        <p>Heelo!</p>
+        <textarea id="content"></textarea>
     </div>
 </body>
-
-<script id="os-class-element" data-id="NoteBlock">
-    class OS {
-        #listen(callback) {
-            window.onmessage = (e) => {
-                callback(e.data);
-            }
-        }
-        call(method, params, callback) {
-            let appName = document.getElementById("os-class-element").getAttribute("data-id")
-            window.top.postMessage({
-                origin: appName,
-                method: method,
-                params: params,
-            }, "*");
-
-            if (callback)
-                this.#listen(callback)
-        }
-    }
-</script>
 <script>
     let os = new OS();
 
     window.addEventListener('message', (event) => {
-        console.log(event);
+        if (event.data.sender != "system") {
+            getFile(event.data.return);
+        }
     });
+
+    function getFile(path) {
+        os.call("readFile", path, (res) => setContent(res.return));
+    }
+
+    function setContent(content) {
+        document.getElementById("content").value = content
+    }
 </script>
