made notepad and fileexplorer word

--- a/userfiles/C/ProgramFiles/fileexplorer/index.html
+++ b/userfiles/C/ProgramFiles/fileexplorer/index.html
@@ -1,15 +1,22 @@
 <head>
-
 </head>
-
+    <link rel="stylesheet" href="./css/index.css">
 <body>
 
     <div class="file-path-container">
-
+        <div>
+            <img class="button" id="left-arrow" src="./icons/left-arrow.png" alt="back">
+            <img class="button" id="right-arrow" src="./icons/right-arrow.png" alt="forward">
+        </div>
+        <div>
+            <input id="path-history" type="text" disabled>
+        </div>
     </div>
 
-    <div class="main-container">
+    <div class="main-container" id="main-container">
 
     </div>
 
 </body>
+
+<script src="./index.js"></script>
