--- a/userfiles/C/ProgramFiles/noteblock/noteblock-gui.html
+++ b/userfiles/C/ProgramFiles/noteblock/noteblock-gui.html
@@ -1,3 +1,9 @@
-<h1>this is noteblock</h1>
+<head>
+    <link rel="stylesheet" href="./css/index.css">
+</head>
+
+<body>
+    <textarea id="content"></textarea>
+</body>
 
 <script src="./window.js"></script>
