--- a/userfiles/C/ProgramFiles/fileexplorer/index.html
+++ b/userfiles/C/ProgramFiles/fileexplorer/index.html
@@ -4,19 +4,21 @@
 <body>
 
     <div class="file-path-container">
-        <div>
             <img class="button" id="left-arrow" src="./icons/left-arrow.png" alt="back">
             <img class="button" id="right-arrow" src="./icons/right-arrow.png" alt="forward">
-        </div>
-        <div>
-            <input id="path-history" type="text" disabled>
-        </div>
+            <input class="path-history" id="path-history" type="text" disabled>
     </div>
 
     <div class="main-container" id="main-container">
+        <div class="pinned-directories">
 
+        </div>
+
+        <div class="current-directory" id="current-directory">
+
+        </div>
     </div>
 
 </body>
 
-<script src="./index.js"></script>
+<script type="module" src="./index.js"></script>
