--- a/userfiles/C/ProgramFiles/noteblock/noteblock-gui.html
+++ b/userfiles/C/ProgramFiles/noteblock/noteblock-gui.html
@@ -3,7 +3,8 @@
 </head>
 
 <body>
+    <div class="top-header"><span id="open-file">open</span></div>
     <textarea id="content"></textarea>
 </body>
 
-<script src="./window.js"></script>
+<script type="module" src="./window.js"></script>
