new low level kernel api

--- a/userfiles/C/ProgramFiles/debug/debug.html
+++ b/userfiles/C/ProgramFiles/debug/debug.html
@@ -5,6 +5,6 @@
 <p>this is a window!</p>
 </body>
 
-<script src="./src/main.js"></script>
+<script src="debug.js" type="module"></script>
 
 </html>
