--- a/userfiles/C/ProgramFiles/fileexplorer/applicationClient/gui.html
+++ b/userfiles/C/ProgramFiles/fileexplorer/applicationClient/gui.html
@@ -1,4 +1,6 @@
-<head>
+<p>App client</p>
+
+<!-- <head>
 </head>
     <link rel="stylesheet" href="../css/index.css">
 <body>
@@ -21,4 +23,4 @@
 
 </body>
 
-<script type="module" src="./gui.js"></script>
+<script type="module" src="./gui.js"></script> -->
