Implemented terminal and bin

--- a/userfiles/C/ProgramFiles/fileexplorer/applicationClient/gui.html
+++ b/userfiles/C/ProgramFiles/fileexplorer/applicationClient/gui.html
@@ -1,14 +1,13 @@
-<p>App client</p>
-
-<!-- <head>
+<head>
 </head>
-    <link rel="stylesheet" href="../css/index.css">
+<link rel="stylesheet" href="../css/index.css">
+
 <body>
 
     <div class="file-path-container">
-            <img class="button" id="left-arrow" src="../icons/left-arrow.png" alt="back">
-            <img class="button" id="right-arrow" src="../icons/right-arrow.png" alt="forward">
-            <input class="path-history" id="path-history" type="text" disabled>
+        <img class="button" id="left-arrow" src="../icons/left-arrow.png" alt="back">
+        <img class="button" id="right-arrow" src="../icons/right-arrow.png" alt="forward">
+        <input class="path-history" id="path-history" type="text" disabled>
     </div>
 
     <div class="main-container" id="main-container">
@@ -23,4 +22,4 @@
 
 </body>
 
-<script type="module" src="./gui.js"></script> -->
+<script type="module" src="./gui.js"></script>
