--- a/userfiles/C/ProgramFiles/noteblock/index.html
+++ b/userfiles/C/ProgramFiles/noteblock/index.html
@@ -1,1 +1,10 @@
+<head>
+    <link rel="stylesheet" href="./css/index.css">
+</head>
+
+<body>
+    <div class="top-header"><span id="open-file">open</span></div>
+    <textarea id="content"></textarea>
+</body>
+
 <script type="module" src="./index.js"></script>
