--- a/userfiles/C/ProgramFiles/noteblock/index.html
+++ b/userfiles/C/ProgramFiles/noteblock/index.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-    <div class="top-header"><span id="open-file">open</span></div>
+    <div class="top-header"><span id="open-file">open</span><span id="save-file">save</span></div>
     <textarea id="content"></textarea>
 </body>
 
