--- a/userfiles/C/ProgramFiles/noteblock/index.html
+++ b/userfiles/C/ProgramFiles/noteblock/index.html
@@ -3,7 +3,20 @@
 </head>
 
 <body>
-    <div class="top-header"><span id="open-file">open</span><span id="save-file">save</span></div>
+    <div class="top-header">
+        <span class="file-button" id="file-button">
+            file
+        </span>
+    </div>
+    <div id="selection-menu" class="selection-menu">
+        <ul>
+            <li id="new-window">New window</li>
+            <li id="open">Open</li>
+            <li id="save">Save</li>
+            <li id="save-as">Save as</li>
+            <li id="close">Close</li>
+        </ul>
+    </div>
     <textarea id="content"></textarea>
 </body>
 
