--- a/userfiles/C/ProgramFiles/fileexplorer/fileSelectClient/gui.html
+++ b/userfiles/C/ProgramFiles/fileexplorer/fileSelectClient/gui.html
@@ -1,12 +1,13 @@
 <head>
 </head>
-    <link rel="stylesheet" href="../css/index.css">
+<link rel="stylesheet" href="../css/index.css">
+
 <body>
     <p>file selection mode</p>
     <div class="file-path-container">
-            <img class="button" id="left-arrow" src="../icons/left-arrow.png" alt="back">
-            <img class="button" id="right-arrow" src="../icons/right-arrow.png" alt="forward">
-            <input class="path-history" id="path-history" type="text" disabled>
+        <img class="button" id="left-arrow" src="../icons/left-arrow.png" alt="back">
+        <img class="button" id="right-arrow" src="../icons/right-arrow.png" alt="forward">
+        <input class="path-history" id="path-history" type="text" disabled>
     </div>
 
     <div class="main-container" id="main-container">
@@ -17,6 +18,10 @@
         <div class="current-directory" id="current-directory">
 
         </div>
+    </div>
+
+    <div class="save-as-input">
+        <input id="file-name" type="text" />
     </div>
 
 </body>
