--- a/userfiles/C/ProgramFiles/fileexplorer/fileSelectClient/gui.html
+++ b/userfiles/C/ProgramFiles/fileexplorer/fileSelectClient/gui.html
@@ -21,7 +21,8 @@
     </div>
 
     <div class="save-as-input">
-        <input id="file-name" type="text" />
+        <input id="file-name" placeholder="file-name" type="text" />
+        <p id="save-as-button">save as</p>
     </div>
 
 </body>
