--- a/userfiles/C/OperatingSystem/thijm32/dsk/dsk.html
+++ b/userfiles/C/OperatingSystem/thijm32/dsk/dsk.html
@@ -1,8 +1,9 @@
-<script src="./dsk.js" type="module"></script>
+<script src="./dsk-logic.js" type="module"></script>
 <link rel="stylesheet" href="./style/index.css">
 
 <section id="desktop">
     <!-- #Section main applications -->
+    <h2>helo</h2>
     <section id="main-application-container" class="overlay-element">
     </section>
 
